--- a/app/templates/shipping-information.hbs
+++ b/app/templates/shipping-information.hbs
@@ -1,3 +1,3 @@
-Shipping Info
 {{outlet}}
-{{component 'shipment-table' items=model}}
+{{component 'filter-settings' filterValue=filterVal}}
+{{component 'shipment-table' items=model filterValue=(readonly filterVal)}}
