Added filter logic

--- a/app/templates/components/filter-settings.hbs
+++ b/app/templates/components/filter-settings.hbs
@@ -1,4 +1,4 @@
 <label>
     search shipment id
-    {{textarea value=filterValue class="filter-input" placeholder="search"}}
+    {{input value=filterValue class="filter-input" placeholder="search"}}
 </label>
