--- a/app/templates/components/shipment-table.hbs
+++ b/app/templates/components/shipment-table.hbs
@@ -10,7 +10,7 @@
 </tr>
 </thead>
 <tbody>
-{{#each filteredItems as |item|}}
+{{#each sortedItems as |item|}}
     <tr>
         <td class="status">
             {{item.currentStatus.code}}
