Added toggle functionality

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,7 +4,18 @@ body {
 
 .shipment-table {
   width: 100%;
-  
+
+  tr {
+    .show-more {
+      cursor: pointer;
+    }
+    &.history {
+      .shipping-container {
+        display: none;
+      }
+    }
+  }
+
   td {
     text-align: center;
   }
