Added individual status routes

--- a/app/templates/components/shipment-table.hbs
+++ b/app/templates/components/shipment-table.hbs
@@ -35,8 +35,7 @@
     <tr class="{{item.classNamesHistory}}">
         <td colspan="6">
             <div class="shipping-container" id="{{item.shippingHistoryId}}">
-                {{!shipment-history historyItems=item.sortedFullHistory}}
-                test
+                {{shipment-history historyItems=item.sortedFullHistory}}
             </div>
         </td>
     </tr>
